# picante

./: .gitignore  Cargo.toml  README.md  README.md.in
.cargo-husky/hooks/: pre-commit  pre-push
.config/: dodeca.kdl  dodeca.yaml
.config/captain/: config.kdl  config.yaml
.config/tracey/: config.kdl
.facet-dev-templates/: readme-footer.md  readme-header.md
.github/workflows/: ci.yml  release-plz.yml
crates/picante/: Cargo.toml  arborium-header.html
crates/picante-macros/: Cargo.toml
crates/picante-macros/src/: db.rs  input.rs  interned.rs  lib.rs  struct_item.rs  tracked.rs  util.rs
crates/picante/src/: debug.rs  error.rs  facet_eq.rs  frame.rs  inflight.rs  key.rs  lib.rs  persist.rs  revision.rs  runtime.rs  wal.rs
crates/picante/src/ingredient/: derived.rs  input.rs  interned.rs  mod.rs
crates/picante/tests/: basic.rs  cache_graph.rs  macros.rs  notifications.rs  persist.rs  shared_cache.rs  snapshot.rs
crates/picante/tests/ui/: input_missing_key.rs  input_missing_key.stderr  interned_generics.rs  interned_generics.stderr  tracked_missing_db.rs  tracked_missing_db.stderr  tracked_multiple_generics.rs  tracked_multiple_generics.stderr  tracked_no_generic.rs  tracked_no_generic.stderr
docs/: .gitignore  macro-design.md
docs/content/: _index.md
docs/content/guide/: _index.md  architecture.md  comparisons.md  future.md  getting-started.md  motivation.md
docs/content/internals/: _index.md  architecture.md  cells.md  comparisons.md  events.md  future.md  inflight.md  keys-and-kinds.md  motivation.md  persistence.md  snapshots.md  tracing.md
docs/spec/: picante.md
docs/static/css/: style.css
docs/templates/: base.html  index.html
hooks/: install.sh  pre-commit  pre-push
scripts/: setup.sh
