[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
dashmap = "5.5.3"
im = "15.1.0"
divan = "0.1"
facet = "0.32.2"
facet-assert = "0.32.2"
facet-postcard = "0.32.2"
futures = "0.3.31"
heck = "0.5.0"
parking_lot = "0.12.4"
proc-macro2 = "1.0.101"
quote = "1.0.41"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
trybuild = "1.0"
unsynn = "0.3.0"
