[package]
name = "picante"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors = ["Amos Wenger <amos@bearcove.eu>"]
description = "An async incremental query runtime"
repository = "https://github.com/bearcove/picante"
homepage = "https://github.com/bearcove/picante"
readme = "../../README.md"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
dashmap.workspace = true
im.workspace = true
facet.workspace = true
facet-core.workspace = true
facet-reflect.workspace = true
facet-format-postcard.workspace = true
futures-util = { version = "0.3.31", default-features = false, features = ["std", "async-await"] }
parking_lot.workspace = true
tokio.workspace = true
tracing.workspace = true
picante-macros = { path = "../picante-macros", optional = true }

[features]
default = ["macros"]
macros = ["dep:picante-macros"]

[dev-dependencies]
divan.workspace = true
tokio-test-lite.workspace = true
tracing-subscriber.workspace = true
trybuild.workspace = true

[[bench]]
name = "derived"
harness = false
